--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,154 @@
+*,
+*:before,
+*:after {
+  box-sizing: border-box;
+}
+
 .App {
-  text-align: center;
+  width: 300px;
+  margin: 100px auto;
 }
 
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
+body {
+  background:
+    radial-gradient(black 15%, transparent 16%) 0 0,
+    radial-gradient(black 15%, transparent 16%) 8px 8px,
+    radial-gradient(rgba(255, 255, 255, .1) 15%, transparent 20%) 0 1px,
+    radial-gradient(rgba(255, 255, 255, .1) 15%, transparent 20%) 8px 9px;
+  background-size: 16px 16px;
+  background-color: #282828;
 }
 
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
-}
-
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
+p {
+  margin: 0;
+  height: 90%;
+  align-items: center;
   display: flex;
-  flex-direction: column;
+  flex-wrap: wrap;
+  width: 50%;
+}
+
+.wheather_widget {
+  position: fixed;
+  right: 10px;
+  border-radius: 10px;
+  display: flex;
+  justify-content: center;
+  flex-wrap: wrap;
+  width: 300px;
+  margin-right: 0px;
+  transition-duration: 0.7s;
+  transition-property: margin-right;
+}
+
+.weather-right__feels,
+.weather-right__wind-speed,
+.weather-right__humidity,
+.weather-right__description {
+  padding-left: 5px;
+}
+
+.day {
+  display: flex;
+  width: 100%;
+  flex-wrap: wrap;
+}
+
+.day {
+  z-index: 4;
+}
+
+.row {
+  display: flex;
+  width: 100%;
+  flex-wrap: wrap;
+  flex-direction: row;
+  justify-content: space-between;
+  padding: 5px 10px;
+}
+
+.country,
+.location,
+.description {
+  width: 100%;
+}
+
+.location {
+  font-size: 18px;
+}
+
+.icon {
+  width: 100px;
+}
+
+.weather-left-temp {
+  width: 50%;
   align-items: center;
   justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
+  display: flex;
 }
 
-.App-link {
-  color: #61dafb;
+.weather-right-card {
+  width: 50%;
 }
 
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+.weather-right__item {
+  font-size: 12px;
+}
+
+.details {
+  text-align: left;
+  border-bottom: solid #444343 1px;
+}
+
+.top {
+  background-color: #a5a5a5;
+  border-radius: 10px 10px 0px 0px;
+}
+
+.center {
+  background-color: #faebd7;
+  padding-top: 15px;
+}
+
+.day .center {
+  padding-top: 5px;
+}
+
+.bottom {
+  border-bottom: 1px black solid;
+  background-color: #94caca;
+  display: flex;
+  align-items: center;
+  justify-content: space-around;
+  border-radius: 0px 0px 10px 10px;
+}
+
+#openWeather {
+  text-decoration: none;
+  border-radius: 5px;
+  background-color: #c9c9c9;
+  cursor: pointer;
+  transition-property: background-color;
+  transition-duration: 0.5s;
+}
+
+#openWeather:hover {
+  text-decoration: none;
+  background-color: #e4e1e1;
+}
+
+#openWeather:active,
+#openWeather:focus {
+  outline-color: inherit;
+  outline-style: none;
+  outline-width: 0px;
+}
+
+.load {
+  display: flex;
+}
+
+.weather-left-temp span {
+  font-size: 30px;
 }
